
  Thanks to David Christensen <david@endpoint.com> for the fix.

* Fixed BounceReferrals bugs: Correctly pass through query strings, and
  prevent redirection loops. Use DirectoryIndex for root URL instead of
  "process". Thanks to David Christensen <david@endpoint.com>.

* Various UTF-8 improvements.

* Update broken getppid() detection for Perl 5.10.0.

Tags
----

* Made [email] process Cc and Bcc options for plain text emails.

UI
--

* Recognize Opera as DHTML browser. Thanks to Don Hathaway for the patch.

* Fix broken form action quoting. Thanks to Richard Templet <richard@endpoint.com>.

Standard demo
-------------

* Fixed wrong URLs in language selection (#265). Thanks to Friedrich
  Strohmaier for the report.

* Fix cross site scripting error found by Josh Lavin of Perusion.

Packaging
---------

* Updated Debconf templates for Vietnamese, Swedish, German, French, and Basque.


------------------------------------------------------------------------------


Interchange 5.6.1 released 2008-11-13.

Core
----

* Fixed regression in Vend::Table::DBI::set_slice for the following usage
  pattern (RT #200):

  $Db{table}->set_slice('', %parms));

* Quell bogus warnings from Encode::Alias (#224). Thanks to Andy
  <ic@tvcables.co.uk> and Rene Hertell <icdevgroup@hertell.com>.

* Added Nunavut to the list of valid Canadian provinces (#231). Thanks to
  Mathew Jones for the report.

* Fix vulnerability where a string passed in the mv_order_item CGI variable is
  displayed verbatim without any input sanitation if there is a valid sku in
  mv_sku. Thanks to Mat from Bibliopolis for discovering and reporting the
  vulnerability.

* Fixed deficiency in Levies, where multiple handling modes separated by null
  would not work as in the old subtotal calculation model.

* Allow XML posts by e.g. Google Checkout, which broke in Interchange 5.6.0
  (RT #219). By Andy <ic@tvcables.co.uk>.

* Corrected logic flaw that applied UTF-8 handling in some cases where it