@@ -34,6 +34,8 @@ Core
 
 * Update broken getppid() detection for Perl 5.10.0.
 
+* Fixed cross site scripting exploit in account creation (#306).
+
 Tags
 ----
 
